<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ai.tegmentum</groupId>
        <artifactId>wasmtime4j-parent</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>wasmtime4j-jni</artifactId>
    <packaging>jar</packaging>

    <name>Wasmtime4j JNI Implementation</name>
    <description>JNI implementation for Wasmtime WebAssembly runtime (Java 8-22)</description>

    <properties>
        <!-- JNI implementation targets Java 8+ -->
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- Public API dependency -->
        <dependency>
            <groupId>ai.tegmentum</groupId>
            <artifactId>wasmtime4j</artifactId>
            <version>${project.version}</version>
            <optional>false</optional>
        </dependency>

        <!-- Native loader dependency (for direct imports) -->
        <dependency>
            <groupId>ai.tegmentum</groupId>
            <artifactId>wasmtime4j-native-loader</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Native library dependency (runtime) -->
        <dependency>
            <groupId>ai.tegmentum</groupId>
            <artifactId>wasmtime4j-native</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- SpotBugs annotations for suppressing warnings -->
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>4.8.6</version>
            <scope>provided</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Ensure Java 8 compatibility and JNI header generation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>8</release>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Xlint:-options</arg>
                        <arg>-h</arg>
                        <arg>${project.build.directory}/generated-sources/native-headers</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Test execution -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <systemPropertyVariables>
                        <wasmtime4j.native.mode>auto</wasmtime4j.native.mode>
                        <wasmtime4j.native.strategy1>false</wasmtime4j.native.strategy1>
                        <wasmtime4j.native.tmpdir>${project.build.directory}/wasmtime4j-native</wasmtime4j.native.tmpdir>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <!-- Generate sources jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>

            <!-- Generate javadoc jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>

            <!-- Copy native libraries from wasmtime4j-native build output for tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-native-for-tests</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/../wasmtime4j-native/target/classes</directory>
                                    <includes>
                                        <include>natives/**</include>
                                    </includes>
                                </resource>
                            </resources>
                            <overwrite>true</overwrite>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Unpack native libraries from wasmtime4j-native for packaging -->
            <!-- Uses prepare-package phase so reactor modules are already packaged -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-native-libraries</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>ai.tegmentum</includeGroupIds>
                            <includeArtifactIds>wasmtime4j-native</includeArtifactIds>
                            <includes>natives/**</includes>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <overWriteReleases>true</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Copy generated headers to native directory -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-jni-headers</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="../wasmtime4j-native/jni-headers"/>
                                <copy todir="../wasmtime4j-native/jni-headers" failonerror="false">
                                    <fileset dir="${project.build.directory}/generated-sources/native-headers">
                                        <include name="*.h"/>
                                    </fileset>
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>